--- a/app/globals.scss
+++ b/app/globals.scss
@@ -6,5 +6,7 @@
     padding: 6rem;
     min-height: 100vh;
     border: 2px solid black;
+    box-sizing: border-box;
+    max-width: 100vw;
   }
   
