--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,4 +1,6 @@
 .main {
+    width: 100vw;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -8,5 +10,6 @@
     border: 2px solid black;
     box-sizing: border-box;
     max-width: 100vw;
-  }
-  
+    margin-left: auto;
+    margin-right: auto;
+}
