--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -1,7 +1,15 @@
 .main {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
+    padding: 6rem;
+    min-height: 100vh;
+    border: 2px solid black;
+    box-sizing: border-box;
+    max-width: 100vw;
+    margin-left: auto;
+    margin-right: auto;
 }
