--- a/app/styles/components/Footer.module.scss
+++ b/app/styles/components/Footer.module.scss
@@ -1,21 +1,21 @@
+@import './app/styles/base/_variables';
+
 .main{
-    width: 100vw;
-    max-width: 1500px;
-    height: 15vh;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: #ffffff;
+    font-family: $primary-font;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    padding: 0 5%;
+    padding: 1rem;
+    width: 100vh;
+    width: 100vw;
+    max-width: 1250px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10rem;
     position: relative;
-    top: 0;
-    z-index: 100;
-    bottom: 0%;
-    gap: 0.1rem;
-    
+    bottom: 0;
+    left: 0;
     .copyright{
         width: 100%;
         height: 100%;
