background image change

--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -1,15 +1,11 @@
-.main {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    padding: 6rem;
-    min-height: 100vh;
-    border: 2px solid black;
-    box-sizing: border-box;
-    max-width: 100vw;
+*.main {
+    display: block;
     margin-left: auto;
     margin-right: auto;
+    width: 100vw;
+    height: 100vh;
+    min-width: 100vw;
+    min-height: 100vh;
+    padding: 1rem;
+   
 }
