--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,3 +1,4 @@
+@import 'base/_base';
 *,
 *::before,
 *::after {
@@ -22,7 +23,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 // Colors
-$primary-color: #3498db;
+$primary-color: #ffffff;
 $secondary-color: #2c3e50;
 
 // Breakpoints
