--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -1,11 +1,33 @@
+@import './app/styles/base/_variables';
+@import './app/styles/base/_base';
+
 *.main {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: auto;
     min-width: 100vw;
-    min-height: 100vh;
-    padding: 1rem;
-   
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+    padding: 0 1rem;
+    margin: 0 auto;
+    
 }
+// .html {
+//     font-size: 16px;
+//     line-height: 1.5;
+//     font-family: var(--font-family);
+//     box-sizing: border-box;
+//     border: 2px solid red;
+//   }
+  
+//   .body {
+//     margin: 0;
+//     padding: 0;
+//     background-color: #f5f5f5;
+//     color: #333;
+//   }
+  
+//   .layout {
+//     display: flex;
+//     flex-direction: column;
+//     min-height: 100vh;
+//   }
