--- a/app/styles/components/Banner.module.scss
+++ b/app/styles/components/Banner.module.scss
@@ -1,14 +1,10 @@
 .container {
     width: 100vw;
-    min-width: 100vw;
-   
-    display: flex;
-    flex-direction: column;
-   
+    max-width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 1rem;
+    margin: 0 auto;
     
   }
