--- a/app/styles/components/Footer.module.scss
+++ b/app/styles/components/Footer.module.scss
@@ -6,26 +6,16 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem;
-    width: 100vh;
-    width: 100vw;
-    max-width: 1250px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 10rem;
-    position: relative;
     bottom: 0;
-    left: 0;
+    max-width: 100%;
     .copyright{
-        width: 100%;
-        height: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
         p{
             font-size: 1.5rem;
             font-weight: 600;
-            color: #000;
+            color: $primary-text-color;
         }
     }
 }
