--- a/app/styles/components/Navbar.module.scss
+++ b/app/styles/components/Navbar.module.scss
@@ -5,37 +5,40 @@
 .navbar {
   font-family: $primary-font;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
+  margin: 0 auto;
   padding: 1rem;
-  width: 100%;
-  max-width: 1450px;
-  min-width: 300px;
-  margin-left: auto;
-  margin-right: auto;
 
   .logo {
     margin: 0;
     font-size: 1rem;
     font-weight: 300;
-    position: relative;
     text-decoration: none;
     font-family: $primary-font;
     color: $primary-text-color;
+    padding-left: 1rem;
   }
-
   .burgerMenu {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    width: 24px;
-    height: 24px;
+    align-items: center;
+    width: 2.3rem;
+    height: auto;
     cursor: pointer;
+    text-align: center;
+    background-color: white;
+    border: none;
+    padding: 0;
+    font-size: 1rem;
+    margin-top: 0.5rem;
+    color: #000;
 
     span {
       width: 100%;
       height: 2px;
-      background-color: $primary-text-color;
+      background-color: white;
     }
   }
 
@@ -45,16 +48,17 @@
     &.open {
       display: flex;
       flex-direction: column;
-      position: absolute;
+      position: relative;
       top: 100%;
       left: 0;
       width: 100%;
-      background-color: rgba(0, 0, 0, 0.8);
+      background-color: rgba(255, 255, 255, 0.8);
       padding: 1rem;
       z-index: 100;
 
       li {
         margin-bottom: 1rem;
+        text-decoration: none;
       }
     }
 
@@ -69,6 +73,7 @@
     margin-left: 2rem;
     color: #333;
     text-decoration: none;
+    margin-right: 8rem;
   }
 }
 // .navbar {
