--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -1,2 +1,12 @@
 $primary-font: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
 $primary-text-color: #333;
+$primary-color: #ffffff;
+$secondary-color: #2c3e50;
+
+
+$breakpoint-mobile: 480px;
+$breakpoint-tablet: 768px;
+$breakpoint-desktop: 1024px;
+$breakpoint-desktop-wide: 1280px;
+$breakpoint-desktop-ultra-wide: 1536px;
+$breakpoint-desktop-ultra-ultra-wide: 1920px;
