--- a/app/styles/base/_base.scss
+++ b/app/styles/base/_base.scss
@@ -1,21 +1,18 @@
+// @import './_variables';
+// @import './_typography';
 
-  .html {
-    font-size: 16px;
-    line-height: 1.5;
-    font-family: var(--font-family);
-    box-sizing: border-box;
-    border: 2px solid red;
-  }
-  
-  .body {
-    margin: 0;
-    padding: 0;
-    background-color: #f5f5f5;
-    color: #333;
-  }
-  
-  .layout {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-  }
+// body {
+//   color: $primary-color;
+//   background-color: $secondary-color;
+// }
+
+$font-size-mobile: 16px;
+$font-size-tablet: 18px;
+$font-size-desktop: 20px;
+
+$primary-color: #000000;
+$secondary-color: #ffffff;
+
+$breakpoint-mobile: 480px;
+$breakpoint-tablet: 768px;
+$breakpoint-desktop: 1024px;
