--- a/app/styles/components/Navbar.module.scss
+++ b/app/styles/components/Navbar.module.scss
@@ -1,14 +1,36 @@
 
 @import './app/styles/base/_variables';
+@import './app/styles/utils/mixins';
 
 
 .navbar {
+  background-color: $primary-color;
   font-family: $primary-font;
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin: 0 auto;
   padding: 1rem;
+  width: 80%;
+  max-width: 900px;
+
+  @include respond-to('tablet') {
+    background-color: darken($primary-color, 10%);
+  }
+  
+  @include respond-to('desktop') {
+    background-color: darken($primary-color, 20%);
+  }
+  @include respond-to('desktop-wide') {
+    background-color: darken($primary-color, 30%);
+  }
+  @include respond-to('desktop-ultra-wide') {
+    background-color: darken($primary-color, 40%);
+  }
+  @include respond-to('desktop-ultra-ultra-wide') {
+    background-color: darken($primary-color, 50%);
+  }
+  
 
   .logo {
     margin: 0;
@@ -17,7 +39,7 @@
     text-decoration: none;
     font-family: $primary-font;
     color: $primary-text-color;
-    padding-left: 0.8rem;
+    
   }
   .burgerMenu {
     display: flex;
@@ -75,47 +97,7 @@
     justify-content: center;
     align-items: center;
   }
+  .instagramSVG:hover {
+    color: #000;
+  }
 }
-
- // media queries
-
-//  @media (min-width: 1250px) {
-//     .navbar{font-size: 1.7rem;
-//     }
-//     .logo {
-//       font-size: 2rem;
-//     }
-//   }
-
-//   @media (min-width: 768px) {
-//     .navbar{font-size: 1.7rem;
-//     }
-//     .logo {
-//       font-size: 1.8rem;
-//     }
-//     .burgerMenu {
-//       display: flex;
-//     }
-//   }
-
-//   @media (min-width: 600px) {
-//     .navbar{font-size: 1.7rem;
-//     }
-//     .logo {
-//       font-size: 1.6rem;
-//     }
-//   }
-
-//   @media (min-width: 390px) {
-//     .navbar{font-size: 1.7rem;
-//     }
-//     .logo {
-//       font-size: 1.5rem;
-//     }
-//     .burgerMenu {
-//         font-size: 1.5rem;
-//         display: flex;
-
-
-//     }
-//   }
