add import links to variables in scss

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,4 +1,9 @@
-@import './base/variables';
+@use './app/styles/base/_variables' as _variables;
+@use './app/styles/utils/_mixins' as _mixins;
+@use './app/styles/base/_base' as _base;
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Montserrat+Alternates:wght@400;700&family=Montserrat+Subrayada:wght@400;700&display=swap');
+
 
 html {
   box-sizing: border-box;
@@ -12,7 +17,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-family: $primary-font;
+  font-family: _variables.$primary-font;
   font-size: 1.6rem; // This sets the base font-size to be 16px
   line-height: 1.6;
   color: #333;
@@ -33,6 +38,6 @@ a {
   }
 
   &:focus {
-    outline: 2px solid #000;
+    outline: 2px solid _variables.$primary-color;
   }
 }
