--- a/app/styles/utils/_mixins.scss
+++ b/app/styles/utils/_mixins.scss
@@ -33,4 +33,20 @@
       @content;
     }
   }
+  @include respond-to('tablet') {
+    background-color: darken(_variables.$primary-color, 10%);
+  }
+  
+  @include respond-to('desktop') {
+    background-color: darken(_variables.$primary-color, 20%);
+  }
+  @include respond-to('desktop-wide') {
+    background-color: darken(_variables.$primary-color, 30%);
+  }
+  @include respond-to('desktop-ultra-wide') {
+    background-color: darken(_variables.$primary-color, 40%);
+  }
+  @include respond-to('desktop-ultra-ultra-wide') {
+    background-color: darken(_variables.$primary-color, 50%);
+  }
 }
