--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -1,5 +1,4 @@
-@import './app/styles/base/_variables';
-@import './app/styles/base/_base';
+@use './app/styles/base/_variables' as _variables;
 
 *.main {
     width: 100%;
@@ -8,8 +7,8 @@
     box-sizing: border-box;
     scroll-behavior: smooth;
     padding: 0 1rem;
-    margin: 0 auto;
-    
+    margin: 0 auto; 
+    font-size: _variables.$font-size-desktop;
 }
 // .html {
 //     font-size: 16px;
