--- a/app/styles/base/_base.scss
+++ b/app/styles/base/_base.scss
@@ -1,18 +1,36 @@
-// @import './_variables';
-// @import './_typography';
+@use './app/styles/base/_variables' as _variables;
 
-// body {
-//   color: $primary-color;
-//   background-color: $secondary-color;
-// }
 
-$font-size-mobile: 16px;
-$font-size-tablet: 18px;
-$font-size-desktop: 20px;
+.main {
+  width: 100%;
+  height: auto;
+  min-width: 100vw;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+  padding: 0 1rem;
+  margin: 0 auto;
+  font-size: _variables.$font-size-desktop;
+}
 
-$primary-color: #000000;
-$secondary-color: #ffffff;
+.main .html {
+  font-size: 16px;
+  line-height: 1.5;
+  font-family: var(--font-family);
+  box-sizing: border-box;
+  border: 2px solid red;
+}
 
-$breakpoint-mobile: 480px;
-$breakpoint-tablet: 768px;
-$breakpoint-desktop: 1024px;
+.main .body {
+  margin: 0;
+  padding: 0;
+  background-color: #f5f5f5;
+  color: #333;
+}
+
+.main .layout {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+
