--- a/app/styles/components/Navbar.module.scss
+++ b/app/styles/components/Navbar.module.scss
@@ -1,71 +1,57 @@
 
-@import './app/styles/base/_variables';
-@import './app/styles/utils/mixins';
-
+@use './app/styles/base/_variables' as _variables;
+@use './app/styles/utils/_mixins' as _mixins;
+@use './app/styles/base/_base' as _base;
 
 .navbar {
-  background-color: $primary-color;
-  font-family: $primary-font;
+  background-color: _variables.$primary-color;
+  font-family: _variables.$primary-font;
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin: 0 auto;
   padding: 1rem;
-  width: 80%;
-  max-width: 900px;
-
-  @include respond-to('tablet') {
-    background-color: darken($primary-color, 10%);
-  }
-  
-  @include respond-to('desktop') {
-    background-color: darken($primary-color, 20%);
-  }
-  @include respond-to('desktop-wide') {
-    background-color: darken($primary-color, 30%);
-  }
-  @include respond-to('desktop-ultra-wide') {
-    background-color: darken($primary-color, 40%);
-  }
-  @include respond-to('desktop-ultra-ultra-wide') {
-    background-color: darken($primary-color, 50%);
-  }
-  
+  width: 100%;
+  max-width: 1100px;
 
   .logo {
     margin: 0;
     font-size: 1rem;
     font-weight: 300;
     text-decoration: none;
-    font-family: $primary-font;
-    color: $primary-text-color;
+    font-family: _variables.$primary-font;
+    color: _variables.$primary-text-color;
     
   }
   .burgerMenu {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    width: 2.3rem;
-    height: 2rem;
-    cursor: pointer;
-    text-align: center;
-    background-color: white;
-    border: none;
-    padding: 0;
-    font-size: 1rem;
-    margin-top: 0.5rem;
-    color: #000;
-
-    span {
-      width: 100%;
-      height: 2px;
-      background-color: white;
-    }
-  }
-
-  .navLinks {
     display: none;
+  }
+  //   display: flex;
+  //   flex-direction: column;
+  //   justify-content: space-around;
+  //   align-items: center;
+  //   width: 2.3rem;
+  //   height: 2rem;
+  //   cursor: pointer;
+  //   text-align: center;
+  //   background-color: white;
+  //   border: none;
+  //   padding: 0;
+  //   font-size: 1rem;
+  //   margin-top: 0.5rem;
+  //   color: #000;
+
+  //   span {
+  //     width: 100%;
+  //     height: 2px;
+  //     background-color: white;
+  //   }
+  // }
+  .navLinks {
+    display: flex;
+    flex-direction: row;
+    gap: 2em;
+    justify-content: space-around;
 
     &.open {
       display: flex;
@@ -74,7 +60,7 @@
       top: 100%;
       left: 0;
       width: 100%;
-      background-color: rgba(255, 255, 255, 0.8);
+      background-color:_variables.$quaternary-color;
       padding: 1rem;
       z-index: 100;
 
@@ -86,7 +72,7 @@
 
     a {
       text-decoration: none;
-      color: $primary-text-color;
+      color: _variables.$primary-text-color;
     }
   }
   .instagramSVG {
@@ -98,6 +84,6 @@
     align-items: center;
   }
   .instagramSVG:hover {
-    color: #000;
+    color: _variables.$primary-color;
   }
 }
