--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -1,32 +1,13 @@
 @use './app/styles/base/_variables' as _variables;
+@use './app/styles/utils/_mixins' as _mixins;
+@use './app/styles/base/_base' as _base;
 
 *.main {
-    width: 100%;
-    height: auto;
-    min-width: 100vw;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
-    padding: 0 1rem;
-    margin: 0 auto; 
-    font-size: _variables.$font-size-desktop;
+    width: 80%;
+    max-width: 1100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
 }
-// .html {
-//     font-size: 16px;
-//     line-height: 1.5;
-//     font-family: var(--font-family);
-//     box-sizing: border-box;
-//     border: 2px solid red;
-//   }
-  
-//   .body {
-//     margin: 0;
-//     padding: 0;
-//     background-color: #f5f5f5;
-//     color: #333;
-//   }
-  
-//   .layout {
-//     display: flex;
-//     flex-direction: column;
-//     min-height: 100vh;
-//   }
