--- a/app/styles/base/_base.scss
+++ b/app/styles/base/_base.scss
@@ -4,7 +4,6 @@
 .main {
   width: 100%;
   height: auto;
-  min-width: 100vw;
   box-sizing: border-box;
   scroll-behavior: smooth;
   padding: 0 1rem;
@@ -15,7 +14,7 @@
 .main .html {
   font-size: 16px;
   line-height: 1.5;
-  font-family: var(--font-family);
+  font-family: _variables.$primary-font;
   box-sizing: border-box;
   border: 2px solid red;
 }
@@ -33,4 +32,12 @@
   min-height: 100vh;
 }
 
-
+.container {
+  width: 100%;
+  max-width: 1100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+}
