--- a/app/styles/components/Banner.module.scss
+++ b/app/styles/components/Banner.module.scss
@@ -1,10 +1,9 @@
 .container {
-    width: 100vw;
-    max-width: 100%;
+    width: 80%;
+    max-width: 1100px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin: 0 auto;
-    
   }
