--- a/app/styles/components/Navbar.module.scss
+++ b/app/styles/components/Navbar.module.scss
@@ -10,14 +10,12 @@
   justify-content: space-between;
   align-items: center;
   margin: 0 auto;
-  padding: 1rem;
-  width: 100%;
+  width: 80%;
   max-width: 1100px;
 
   .logo {
-    margin: 0;
-    font-size: 1rem;
-    font-weight: 300;
+    font-size: 2rem;
+    font-weight: 600;
     text-decoration: none;
     font-family: _variables.$primary-font;
     color: _variables.$primary-text-color;
@@ -51,7 +49,11 @@
     display: flex;
     flex-direction: row;
     gap: 2em;
-    justify-content: space-around;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+    font-size: _variables.$font-size-desktop;
+
 
     &.open {
       display: flex;
@@ -67,6 +69,7 @@
       li {
         margin-bottom: 1rem;
         text-decoration: none;
+        list-style: none;
       }
     }
 
