--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -2,8 +2,8 @@
 @use './app/styles/utils/_mixins' as _mixins;
 @use './app/styles/base/_base' as _base;
 
-*.main {
-    width: 80%;
+.main {
+    width: 100%;
     max-width: 1100px;
     display: flex;
     flex-direction: column;
