--- a/app/styles/base/_base.scss
+++ b/app/styles/base/_base.scss
@@ -1,4 +1,4 @@
-@use './app/styles/base/_variables' as _variables;
+@use './app/styles/base/_variables' as *;
 
 
 .main {
@@ -8,29 +8,9 @@
   scroll-behavior: smooth;
   padding: 0 1rem;
   margin: 0 auto;
-  font-size: _variables.$font-size-desktop;
+  font-size: $font-size-desktop;
 }
 
-.main .html {
-  font-size: 16px;
-  line-height: 1.5;
-  font-family: _variables.$primary-font;
-  box-sizing: border-box;
-  border: 2px solid red;
-}
-
-.main .body {
-  margin: 0;
-  padding: 0;
-  background-color: #f5f5f5;
-  color: #333;
-}
-
-.main .layout {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-}
 
 .container {
   width: 100%;
