--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -11,3 +11,12 @@
     align-items: center;
     margin: 0 auto;
 }
+.container {
+    width: 100%;
+    max-width: 1100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+  }
