--- a/app/styles/components/Banner.module.scss
+++ b/app/styles/components/Banner.module.scss
@@ -3,7 +3,7 @@
 @use './app/styles/base/_base' as _base;
 
 .container {
-    width: 80%;
+    width: 100%;
     max-width: 1100px;
     display: flex;
     flex-direction: column;
@@ -11,3 +11,12 @@
     align-items: center;
     margin: 0 auto;
   }
+  // .main {
+  //   width: 100%;
+  //   max-width: 1100px;
+  //   display: flex;
+  //   flex-direction: column;
+  //   justify-content: center;
+  //   align-items: center;
+  //   margin: 0 auto;
+  // }
