--- a/app/styles/components/Navbar.module.scss
+++ b/app/styles/components/Navbar.module.scss
@@ -1,4 +1,3 @@
-
 @use './app/styles/base/_variables' as *;
 @use './app/styles/utils/_mixins' as _mixins;
 @use './app/styles/base/_base' as _base;
@@ -12,6 +11,7 @@
   margin: 0 auto;
   width: 100%;
   max-width: 1100px;
+  flex-basis: 100%;
 
   .logo {
     font-size: 2rem;
@@ -24,31 +24,11 @@
   .burgerMenu {
     display: none;
   }
-  //   display: flex;
-  //   flex-direction: column;
-  //   justify-content: space-around;
-  //   align-items: center;
-  //   width: 2.3rem;
-  //   height: 2rem;
-  //   cursor: pointer;
-  //   text-align: center;
-  //   background-color: white;
-  //   border: none;
-  //   padding: 0;
-  //   font-size: 1rem;
-  //   margin-top: 0.5rem;
-  //   color: #000;
 
-  //   span {
-  //     width: 100%;
-  //     height: 2px;
-  //     background-color: white;
-  //   }
-  // }
   .navLinks {
     display: flex;
     flex-direction: row;
-    gap: 2em;
+    gap: 1.5em;
     justify-content: space-between;
     align-items: center;
     list-style: none;
@@ -60,11 +40,8 @@
       flex-direction: column;
       position: relative;
       top: 100%;
-      left: 0;
-      width: 100%;
       background-color:$quaternary-color;
       padding: 1rem;
-      z-index: 100;
 
       li {
         margin-bottom: 1rem;
@@ -89,4 +66,37 @@
   .instagramSVG:hover {
     color: $primary-color;
   }
+  @media screen and (max-width: 786px) {
+    .burgerMenu {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      align-items: center;
+      width: 10%;
+      cursor: pointer;
+      text-align: center;
+      background-color: white;
+      border: none;
+      padding: 0;
+      font-size: 1rem;
+      margin-top: 0.5rem;
+      color: #000;
+
+      span {
+        width: 100%;
+        background-color: white;
+      }
+    }
+    
+    .navLinks {
+      display: none;
+    }
+    .logo{
+      font-size: $font-size-mobile;
+    }
+  }
+
+ 
+
 }
+
