--- a/app/styles/base/_base.scss
+++ b/app/styles/base/_base.scss
@@ -3,10 +3,10 @@
 
 .main {
   width: 100%;
-  height: auto;
+  max-width: 1100px;
+  
   box-sizing: border-box;
   scroll-behavior: smooth;
-  padding: 0 1rem;
   margin: 0 auto;
   font-size: $font-size-desktop;
 }
