--- a/app/styles/components/Banner.module.scss
+++ b/app/styles/components/Banner.module.scss
@@ -11,3 +11,9 @@
     align-items: center;
     margin: 0 auto;
   }
+
+  .img {
+    transition: all 2s ease-in-out opacity;
+    opacity: 1;
+  }
+  
