--- a/app/styles/components/Navbar.module.scss
+++ b/app/styles/components/Navbar.module.scss
@@ -6,6 +6,7 @@
   background-color: $primary-color;
   font-family: $primary-font;
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
   margin: 0 auto;
@@ -21,8 +22,6 @@
     font-family: $primary-font;
     color: $secondary-color;
     align-items: center;
-    
-    
   }
   .burgerMenu {
     display: none;
@@ -32,6 +31,9 @@
     display: none;
   }
 
+  .burgerMenuButton{
+    display: none;
+  }
 
   .navLinks {
     display: flex;
@@ -48,18 +50,23 @@
       flex-direction: column;
       background-color:$primary-color;
       padding: 1rem;
-      position: relative;
+      position: absolute;
       margin: 0 auto;
-      width: 100%;
+      width: 50%;
       top: 0;
       left: 0;
       right: 0;
       bottom: 0;
-      z-index: 1;
       justify-content: space-between;
       align-items: center;
       list-style: none;
-      font-size: $font-size-desktop;
+      font-size: $font-size-mobile;
+      margin-bottom: 25rem;
+      margin-top: 8.8rem;
+      transition: all 0.3s ease-in-out;
+      border-radius: 1.5em;
+      
+     
 
       li {
         margin-bottom: 1rem;
@@ -77,10 +84,10 @@
     
   }
 
-  .navLinks a:hover {
-    border-bottom: 2px solid $secondary-color;
-    padding-bottom: 0.2em;
-  }
+  // .navLinks a:hover {
+  //   border-bottom: 2px solid $secondary-color;
+  //   padding-bottom: 0.2em;
+  // }
 
   .InstagramSVG{
     display: none;
@@ -88,14 +95,19 @@
 
 
   @media screen and (max-width: 800px) {
+    .hamburger{
+      background-color: $primary-color;
+    }
 
     .burgerMenuContainer {
       display: flex;
       flex-direction: row;
       justify-content: flex-end;
       align-items: center;
-      flex-basis: 7%;
+      flex-basis: 15%;
       position:relative;
+  
+    
     }
 
     .burgerMenu {
@@ -105,11 +117,24 @@
       align-items: center;
       cursor: pointer;
       text-align: center;
-      background-color: white;
       border: none;
       padding: 0;
       font-size: 1rem;
-      color: #000;
+      margin: 0 auto;
+    }
+    .burgerMenuButton{
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+      text-align: center;
+      border: none;
+      padding: 0;
+      font-size: 0.1rem;
+      transition: all 0.3s ease-in-out;
+      padding: 0.5em;
+      border: none;
     }
     
     
@@ -121,7 +146,7 @@
       flex-direction: column;
       background-color:$primary-color;
       padding: 1rem;
-      position: absolute;
+      position: relative;
       margin: 0 auto;
       width: 100%;
       top: 0;
@@ -133,6 +158,7 @@
       align-items: center;
       list-style: none;
       font-size: $font-size-mobile;
+    
 
       li {
         margin-bottom: 1rem;
@@ -155,7 +181,7 @@
   }
 
     .logo {
-      font-size: $font-size-desktop-ultra-ultra-wide;
+      font-size: $font-size-desktop-ultra-wide;
       text-decoration: none;
     }
     .InstagramSVG{
