--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -19,9 +19,25 @@ $primary-font: 'Montserrat', sans-serif;
 $secondary-font: 'Montserrat Alternates', sans-serif;
 $tertiary-font: 'Montserrat Subrayada', sans-serif;
 
-$font-size-mobile: 1rem;
-$font-size-tablet: 1.2rem;
-$font-size-desktop: 1.4rem;
-$font-size-desktop-wide: 1.6rem;
-$font-size-desktop-ultra-wide: 1.8rem;
-$font-size-desktop-ultra-ultra-wide: 2rem;
+$font-size-mobile: 0.8rem;
+$font-size-tablet: 1.25rem;
+$font-size-desktop: 1.563rem;
+$font-size-desktop-wide: 1.953rem;
+$font-size-desktop-ultra-wide: 2.441rem;
+$font-size-desktop-ultra-ultra-wide: 3.052rem;
+
+$font-size-x-small: 0.8rem;
+$font-size-small: 1.25rem;
+$font-size-normal: 1.563rem;
+$font-size-large: 1.953rem;
+$font-size-x-large: 2.441rem;
+$font-size-xx-large: 3.052rem;
+  
+
+  
+
+
+
+  
+
+
