--- a/app/styles/components/Footer.module.scss
+++ b/app/styles/components/Footer.module.scss
@@ -1,15 +1,10 @@
 @use './app/styles/base/_variables' as *;
 
 .main {
-    font-family: $primary-font;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
     bottom: 0;
-    padding-top: 7em;
-    padding-bottom: 3em;
-    position: relative;
+    top: 0;
+    left: 0;
+    right: 0;
     text-align: center;
     width: 100%;
     max-width: 1100px;
@@ -27,6 +22,7 @@
     }
     @media screen and (max-width: 800px){
         padding-top: 1em;
+
     }
     .copyright{
         display: flex;
