--- a/app/styles/components/Banner.module.scss
+++ b/app/styles/components/Banner.module.scss
@@ -10,10 +10,10 @@
     justify-content: center;
     align-items: center;
     margin: 0 auto;
-    padding-left: 0.5em !important;
-    padding-right: 0.5em !important;
+    // padding-left: 0.3em !important;
+    // padding-right: 0.3em !important;
     overflow: hidden;
-    // height: 100vh;
+    
    
   }
 
