--- a/app/styles/pages/about.module.scss
+++ b/app/styles/pages/about.module.scss
@@ -1,4 +1,4 @@
-@use './app/styles/base/_variables' as _variables;
+@use './app/styles/base/_variables' as *;
 @use './app/styles/utils/_mixins' as _mixins;
 @use './app/styles/base/_base' as _base;
 // @use './app/styles/components/ProfilePicture1.module.scss' as _ProfilePicture1;
@@ -28,6 +28,8 @@
   flex-direction: column;
   align-items: center;
   margin: 0 auto;
+  margin-bottom: 3em;
+  margin-top: 1em;
 }
 
 .section{
@@ -40,7 +42,7 @@
 .title{
     font-size: 1.5rem;
     font-weight: bold;
-    color: _variables.$secondary-color;
+    color:$secondary-color;
     margin: 0;
     padding: 0;
 }
@@ -48,9 +50,9 @@
   width: 80%;
   text-align: center;
   margin: 0 auto;
+  margin-bottom: 1em;
+  color:$secondary-color;
+  font-size: 1.2rem;
 
 }
 
-.headerContainer{
-  
-}
