--- a/app/styles/pages/about.module.scss
+++ b/app/styles/pages/about.module.scss
@@ -31,6 +31,13 @@
   margin-bottom: 3em;
   margin-top: 1em;
 }
+.imageContainer{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+}
 
 .section{
     width: 100%;
